--- a/src/Club/TODO
+++ b/src/Club/TODO
@@ -2,6 +2,8 @@
 change subscription to never expire
 
 == FIXME ==
+create a read form in admin batch
+translate admin batch
 add notification option for users, receive email on booking
 make a filter so users can disable sharing his booking activities
 load users from csv file
