Added option to not send some system mails.

--- a/src/Club/TODO
+++ b/src/Club/TODO
@@ -3,7 +3,8 @@ change subscription to never expire
 remove send system mails
 
 == FIXME ==
-make option to remove system emails
+translate ban
+better explanation of ban
 add notification option for users, receive email on booking
 make a filter so users can disable sharing his booking activities
 load users from csv file
