--- a/src/Club/LayoutBundle/Resources/translations/messages.da.xliff
+++ b/src/Club/LayoutBundle/Resources/translations/messages.da.xliff
@@ -343,8 +343,8 @@
         <target>Info: Hvad vil være den første dag af medlemskabet?</target>
       </trans-unit>
       <trans-unit id="87">
-        <source>Info: When will subscription expire? (Has to be used with StartDate)</source>
-        <target>Info: Hvad vil være den sidste dag af medlemskabet? (Skal bruges med StartDate)</target>
+        <source>Info: When will subscription expire?</source>
+        <target>Info: Hvad vil være den sidste dag af medlemskabet?</target>
       </trans-unit>
       <trans-unit id="88">
         <source>Info: Which locations will the user be a member of?</source>
@@ -2381,6 +2381,10 @@
       <trans-unit id="599">
         <source>Timezone</source>
         <target>Tidszone</target>
+      </trans-unit>
+      <trans-unit id="600">
+        <source>You has to specify a time for the subscription.</source>
+        <target>Du skal vælge en tid for medlemskabet.</target>
       </trans-unit>
 
     </body>
