Made search box smaller.

--- a/src/Club/TODO
+++ b/src/Club/TODO
@@ -3,11 +3,10 @@ change subscription to never expire
 remove send order, welcome mails
 
 == FIXME ==
-make country list smaller in user filter
 load users from csv file
 
 == NOTES TO LATER ==
-cup management
+knockout management
 add custom fields on profiles
 can we clear cache from website
 jquery overlay form on booking
