--- a/src/Club/TODO
+++ b/src/Club/TODO
@@ -4,11 +4,11 @@ remove send order, welcome mails
 
 == FIXME ==
 load users from csv file
+work some more with the team bundle, is everything perfect?
 
 == NOTES TO LATER ==
 knockout management
 add custom fields on profiles
-can we clear cache from website
 jquery overlay form on booking
 enter matches outside of the leagues
 admin user batch, select all
