--- a/src/Club/TODO
+++ b/src/Club/TODO
@@ -1,15 +1,27 @@
+== VERSION 1.3 ==
+request partner
+admin user batch, select search
+make sure user only can book in member status period
+knockout management
+jquery overlay form on booking
+enter matches outside of the leagues
+use guest_allowed_unpaid, validate unpaid orders with product as of type, guest_booking
+prices to book with guest, use normal checkout procedure
+make a button to accept business terms
+bulk create order to users
+do routing to annotation instead of, check default install of symfony bundle
+quick create intervals when creating the field
+make a quick way to remove all team penalties
+make sure user only can use teams in member ship status period
+implement payment for booking
+find a smart way to get default location, might be with the url
+
 == FIXME ==
 report to the user if he uses a bad timezone, http://dk2.php.net/manual/en/timezones.others.php
 
 == NOTES TO LATER ==
-admin user batch, select all
-make sure user only can book in member status period
 add product on dynamic group
-knockout management
 add custom fields on profiles
-jquery overlay form on booking
-enter matches outside of the leagues
-admin user batch, select search
 match integration facebook, share match
 batch assign users to a league
 dynamic pick colors for booking, plan and teams
@@ -34,20 +46,13 @@ add paginator to:
   - blog
 make readonly roles for members
 make teams without ability to attend the team, its for preassigned users only
-use guest_allowed_unpaid, validate unpaid orders with product as of type, guest_booking
-prices to book with guest, use normal checkout procedure
-make a button to accept business terms
 make a way to configure the touch screen client, ever cookie and configure through clubmaster?
-bulk create order to users
 configurationbundle and installerbundle should be disabled after install
 integration with pro-sec PROFI alarm system
 support multiple times on the same interval
-do routing to annotation instead of, check default install of symfony bundle
 find a way that the api does not care if it ends on / or not
 consider make guest book and coupon to products too, that will make the account_number much easier
-quick create intervals when creating the field
 add leagues to tournaments, use of tags or something
-make a quick way to remove all team penalties
 use attribute class as product attribute converter
 add defaults during install:
   - categories
@@ -55,9 +60,7 @@ add defaults during install:
 fix constraints to delete a location
 add transaction on complete order
 add transaction on order change
-make sure user only can use teams in member ship status period
 avoid try / catch on kernel.request listeners
-implement payment for booking
 on admin interval manager, put a default interval in top, that will set the same for everyone
 login through booking page
 login through team attend page
@@ -67,7 +70,6 @@ something is broken when creating more intervals on the same field, fix it
 gravatar throw warning if gravatar does not work (missing network)
 find a way for family subscription
 price on event, has to be optional to use the club system, or pay on arrival
-find a smart way to get default location, might be with the url
 bind coupon to specific product
 move all login pages to /user, or something simulair
 not 2 schedules can have the same interval
