Updated TODO with referance to myplayoffs

--- a/src/Club/TODO
+++ b/src/Club/TODO
@@ -12,7 +12,7 @@ add category priority regarding to account numbers
 request partner
 admin user batch, select search
 make sure user only can book in member status period
-knockout management
+knockout management, checkout myplayoffs.com
 jquery overlay form on booking
 use guest_allowed_unpaid, validate unpaid orders with product as of type, guest_booking
 prices to book with guest, use normal checkout procedure
