--- a/src/Club/TODO
+++ b/src/Club/TODO
@@ -1,4 +1,5 @@
 == VERSION 1.3 ==
+check out if we can do anything about confirm booking controller, have got some error about line 105, getFirstDate on a non object
 you have to be able to see all orders from a user
 need tool so we can monitor how many bookings a member have active
 view if the booking is confirmed on booking overview
