--- a/src/Club/TODO
+++ b/src/Club/TODO
@@ -1,20 +1,24 @@
-== VERSION 1.3 ==
-build new gravatar support
+== VERSION 1.2.1 ==
+knockout management, checkout myplayoffs.com
+requst bundle
 checkout whats up with STUB Locale
 check out if we can do anything about confirm booking controller, have got some error about line 105, getFirstDate on a non object
 you have to be able to see all orders from a user
-need tool so we can monitor how many bookings a member have active
 view if the booking is confirmed on booking overview
 administrator should see which booking has been cancelled due to unconfirmed
+users should be able to create multiple emails, phone
+make sure user only can book in member status period
+make sure user only can use teams in member ship status period
+
+== NOTES TO LATER ==
+build new gravatar support
+need tool so we can monitor how many bookings a member have active
 be able to create product packages
 internal message system
 rewrite failure handler to a listerner
-users should be able to create multiple emails, phone
 add images to products
 add category priority regarding to account numbers
 admin user batch, select search
-make sure user only can book in member status period
-knockout management, checkout myplayoffs.com
 jquery overlay form on booking
 use guest_allowed_unpaid, validate unpaid orders with product as of type, guest_booking
 prices to book with guest, use normal checkout procedure
@@ -22,12 +26,8 @@ make a button to accept business terms
 bulk create order to users
 quick create intervals when creating the field
 make a quick way to remove all team penalties
-make sure user only can use teams in member ship status period
 implement payment for booking
 find a smart way to get default location, might be with the url
-use ParamConverter more
-
-== NOTES TO LATER ==
 add product on dynamic group
 add custom fields on profiles
 match integration facebook, share match
