Fixed bug in translator.

--- a/src/Club/LayoutBundle/Resources/translations/messages.da.xliff
+++ b/src/Club/LayoutBundle/Resources/translations/messages.da.xliff
@@ -2485,7 +2485,7 @@
       <trans-unit id="625">
         <source>There are no passkeys.</source>
         <target>Der er ingen adgangsnøgler.</target>
-      </trans>
+      </trans-unit>
     </body>
   </file>
 </xliff>
