--- a/src/Club/TODO
+++ b/src/Club/TODO
@@ -1,4 +1,5 @@
 == VERSION 1.2.1 ==
+when sending booking mails, names has been switched
 knockout management, checkout myplayoffs.com
 requst bundle
 checkout whats up with STUB Locale
