Added sub items to my profile menu item.

--- a/src/Club/LayoutBundle/Resources/translations/messages.da.xliff
+++ b/src/Club/LayoutBundle/Resources/translations/messages.da.xliff
@@ -2502,6 +2502,10 @@
         <source>No teams in the league.</source>
         <target>Der er ingen hold i denne liga.</target>
       </trans-unit>
+      <trans-unit id="630">
+        <source>Orders</source>
+        <target>Ordrer</target>
+      </trans-unit>
 
     </body>
   </file>
