--- a/src/Club/LayoutBundle/Resources/translations/messages.da.xliff
+++ b/src/Club/LayoutBundle/Resources/translations/messages.da.xliff
@@ -2312,7 +2312,7 @@
       </trans-unit>
       <trans-unit id="582">
         <source>No such user</source>
-        <target>Dit password er udløbet, vælg venligst et nyt herunder.</target>
+        <target>Brugeren findes ikke</target>
       </trans-unit>
       <trans-unit id="583">
         <source>Passkey</source>
