--- a/src/Club/LayoutBundle/Resources/translations/messages.da.xliff
+++ b/src/Club/LayoutBundle/Resources/translations/messages.da.xliff
@@ -2192,7 +2192,7 @@
       </trans-unit>
       <trans-unit id="551">
         <source>Recent matches</source>
-        <target>Senest kampe</target>
+        <target>Seneste kampe</target>
       </trans-unit>
       <trans-unit id="552">
         <source>Team one</source>
