--- a/src/Club/TODO
+++ b/src/Club/TODO
@@ -2,10 +2,12 @@
 set default league_view_top: 5
 
 == VERSION 1.2.1 ==
+use user service in user and adminuser controllers
+enter result in cup
+view cup the right way when generated
 add double in league
 when sending booking mails, names has been switched
-knockout management, checkout myplayoffs.com
-requst bundle
+add small message to request
 checkout whats up with STUB Locale
 check out if we can do anything about confirm booking controller, have got some error about line 105, getFirstDate on a non object
 you have to be able to see all orders from a user
