--- a/src/Club/TODO
+++ b/src/Club/TODO
@@ -16,8 +16,10 @@ administrator should see which booking has been cancelled due to unconfirmed
 users should be able to create multiple emails, phone
 make sure user only can book in member status period
 make sure user only can use teams in member ship status period
+results has to be updated almost emidiatly when a match has been entered, change next run date for instance
 
 == NOTES TO LATER ==
+we might need a mailing list
 quick add users to group
 make it a setting if all should be able to make events
 menu bundle, you should be able to append stuff to sub items
