Added event handling for matchdes.

--- a/src/Club/TODO
+++ b/src/Club/TODO
@@ -14,6 +14,8 @@ make sure user only can use teams in member ship status period
 results has to be updated almost emidiatly when a match has been entered, change next run date for instance
 
 == NOTES TO LATER ==
+upload profil billede til alle medlemmerne
+eller aktivt aktiver gravator extension
 we might need a mailing list
 quick add users to group
 make it a setting if all should be able to make events
