Improved members page.

--- a/src/Club/TODO
+++ b/src/Club/TODO
@@ -1,5 +1,6 @@
 should be able to disable products, atk, remove pay and play
 user forgot password constraint
+obey limit on ajax search request
 
 == VERSION 1.3 ==
 build new gravatar support
