--- a/src/Club/TODO
+++ b/src/Club/TODO
@@ -2,6 +2,7 @@ should be able to disable products, atk, remove pay and play
 user forgot password constraint
 obey limit on ajax search request
 add feedback subject constraint
+replace all p class="box"
 
 == VERSION 1.3 ==
 build new gravatar support
