--- a/src/Club/TODO
+++ b/src/Club/TODO
@@ -1,6 +1,7 @@
 should be able to disable products, atk, remove pay and play
 obey limit on ajax search request
 fix error handling on forms
+fix all forms class="form-horizontal"
 
 == VERSION 1.3 ==
 build new gravatar support
