--- a/src/Club/TODO
+++ b/src/Club/TODO
@@ -3,6 +3,8 @@ obey limit on ajax search request
 fix error handling on forms
 fix all forms class="form-horizontal"
 dont show that many blogs on frontpage, link to the blog page where we have to list all blogs
+point menu event to kernel request, no need to have this addition event
+create a dropdown menu for PROFILE
 
 == VERSION 1.3 ==
 build new gravatar support
