--- a/src/Club/TODO
+++ b/src/Club/TODO
@@ -5,6 +5,7 @@ fix all forms class="form-horizontal"
 dont show that many blogs on frontpage, link to the blog page where we have to list all blogs
 point menu event to kernel request, no need to have this addition event
 create a dropdown menu for PROFILE
+more simple to book fields, if no payment, no need to confirm
 
 == VERSION 1.3 ==
 build new gravatar support
