--- a/src/Club/TODO
+++ b/src/Club/TODO
@@ -8,6 +8,8 @@ create a dropdown menu for PROFILE
 more simple to book fields, if no payment, no need to confirm
 confirm split payment in order handling
 when you book, always could the entire day.. like today at 12:03, you will have to book 6 days ahead.. like today + 6 days, and till the END of the day
+when orders is sent out as autorenewal, seems like all users gets a copy of the same email, with name and everything
+add notice to the admin when he login, if there is a coming date with auto renewal dates
 
 == VERSION 1.3 ==
 build new gravatar support
