--- a/src/Club/TODO
+++ b/src/Club/TODO
@@ -1,4 +1,3 @@
-should be able to disable products, atk, remove pay and play
 obey limit on ajax search request
 fix error handling on forms
 fix all forms class="form-horizontal"
@@ -10,6 +9,8 @@ confirm split payment in order handling
 when you book, always could the entire day.. like today at 12:03, you will have to book 6 days ahead.. like today + 6 days, and till the END of the day
 when orders is sent out as autorenewal, seems like all users gets a copy of the same email, with name and everything
 add notice to the admin when he login, if there is a coming date with auto renewal dates
+
+when upgrading, remember to enable all products
 
 == VERSION 1.3 ==
 build new gravatar support
