--- a/src/Club/TODO
+++ b/src/Club/TODO
@@ -1,4 +1,3 @@
-find all datetime forms, and replace with single_text
 find and fix all ajax stuff
 style order checkout
 remake configuration bundle
@@ -12,6 +11,7 @@ when you book, always could the entire day.. like today at 12:03, you will have 
 when orders is sent out as autorenewal, seems like all users gets a copy of the same email, with name and everything
 add notice to the admin when he login, if there is a coming date with auto renewal dates
 make admin menu more simple
+make feedback as a popdown form
 
 when upgrading, remember to enable all products
 
