--- a/src/Club/TODO
+++ b/src/Club/TODO
@@ -1,5 +1,3 @@
-find and fix all ajax stuff
-style order checkout
 remake configuration bundle
 fix allocate passkey to user
 dont show that many blogs on frontpage, link to the blog page where we have to list all blogs
@@ -12,6 +10,8 @@ when orders is sent out as autorenewal, seems like all users gets a copy of the 
 add notice to the admin when he login, if there is a coming date with auto renewal dates
 make admin menu more simple
 make feedback as a popdown form
+put jquery calendar in all single_text fields
+find and fix all ajax stuff
 
 when upgrading, remember to enable all products
 
