--- a/src/Club/TODO
+++ b/src/Club/TODO
@@ -1,4 +1,3 @@
-fix allocate passkey to user
 dont show that many blogs on frontpage, link to the blog page where we have to list all blogs
 point menu event to kernel request, no need to have this addition event
 create a dropdown menu for PROFILE
@@ -12,6 +11,7 @@ make feedback as a popdown form
 put jquery calendar in all single_text fields
 find and fix all ajax stuff
 improve paginator
+find all ajax pages, and fix em
 
 when upgrading, remember to enable all products
 
