Fixed checkout form.

--- a/src/Club/TODO
+++ b/src/Club/TODO
@@ -8,6 +8,8 @@ find all ajax pages, and fix em
 use new economic bundle
 use new quickpay bundle
 find out how the economic works on split payment
+seems to be problems with the text on product attributes
+style checkout as new member
 
 make feedback as a popdown form
 when upgrading, remember to enable all products
