--- a/src/Club/TODO
+++ b/src/Club/TODO
@@ -10,6 +10,7 @@ use new quickpay bundle
 find out how the economic works on split payment
 seems to be problems with the text on product attributes
 style checkout as new member
+fix admin users page
 
 make feedback as a popdown form
 when upgrading, remember to enable all products
