--- a/src/Club/TODO
+++ b/src/Club/TODO
@@ -1,4 +1,4 @@
-put jquery calendar in all single_text fields
+implement genemuFormBundle for jquery and tinymce
 improve paginator
 find all ajax pages, and fix em
 use new economic bundle
