Moved all pagination to ng.

--- a/src/Club/TODO
+++ b/src/Club/TODO
@@ -1,5 +1,3 @@
-implement genemuFormBundle for jquery and tinymce
-improve paginator
 find all ajax pages, and fix em
 use new economic bundle
 use new quickpay bundle
@@ -7,6 +5,8 @@ find out how the economic works on split payment
 seems to be problems with the text on product attributes
 style checkout as new member
 fix admin users page
+build a form type for jquery (get inspiration from genemu)
+build a form type for tinymce
 
 make feedback as a popdown form
 when upgrading, remember to enable all products
