--- a/src/Club/TODO
+++ b/src/Club/TODO
@@ -1,12 +1,11 @@
-find all ajax pages, and fix em
+build a form type for jquery (get inspiration from genemu)
+build a form type for tinymce
+build a form type for autocomplete
 use new economic bundle
 use new quickpay bundle
 find out how the economic works on split payment
-seems to be problems with the text on product attributes
 style checkout as new member
 fix admin users page
-build a form type for jquery (get inspiration from genemu)
-build a form type for tinymce
 
 make feedback as a popdown form
 when upgrading, remember to enable all products
