--- a/src/Club/TODO
+++ b/src/Club/TODO
@@ -6,6 +6,7 @@ use new quickpay bundle
 find out how the economic works on split payment
 style checkout as new member
 fix admin users page
+seems like helper text is not alligned as it should, check product attributes
 
 make feedback as a popdown form
 when upgrading, remember to enable all products
