--- a/src/Club/LayoutBundle/Resources/translations/messages.da.xliff
+++ b/src/Club/LayoutBundle/Resources/translations/messages.da.xliff
@@ -2486,6 +2486,11 @@
         <source>There are no passkeys.</source>
         <target>Der er ingen adgangsnøgler.</target>
       </trans>
+      <trans-unit id="626">
+        <source>The user does not exists</source>
+        <target>Brugeren findes ikke</target>
+      </trans>
+
     </body>
   </file>
 </xliff>
