--- a/src/Club/TODO
+++ b/src/Club/TODO
@@ -5,14 +5,15 @@ style checkout as new member
 fix admin users page
 seems like helper text is not alligned as it should, check product attributes
 fix crud for events
-add paginator on members page
-optimize queries used on members page
 fix insert match with jquery_autocomplete form class
 
 when upgrading, remember to enable all products
+when upgrading, set last_login_time to when they bought last subscription
 translation
 
 == VERSION 1.3 ==
+make a is_active boolean on user entity
+rewrite active in user repository
 make feedback as a popdown form
 create a dropdown menu for PROFILE
 more simple to book fields, if no payment, no need to confirm
