--- a/src/Club/TODO
+++ b/src/Club/TODO
@@ -1,15 +1,16 @@
+make the filter usefull on admin user page
+style checkout as new member
 use new economic bundle
 use new quickpay bundle
 find out how the economic works on split payment
-style checkout as new member
-fix admin users page
-fix insert match with jquery_autocomplete form class
+pull news ticker
 
 when upgrading, remember to enable all products
 when upgrading, set last_login_time to when they bought last subscription
 translation
 
 == VERSION 1.3 ==
+fix insert match with jquery_autocomplete form class
 make a is_active boolean on user entity
 rewrite active in user repository
 make feedback as a popdown form
