--- a/src/Club/TODO
+++ b/src/Club/TODO
@@ -1,12 +1,12 @@
 make the filter usefull on admin user page
 use new quickpay bundle
-check that layout options is used
 
 when upgrading, remember to enable all products
 when upgrading, set last_login_time to when they bought last subscription
 translation
 
 == VERSION 1.3 ==
+make action alerts, email when user book or whatever
 fix insert match with jquery_autocomplete form class
 make a is_active boolean on user entity
 rewrite active in user repository
