--- a/src/Club/TODO
+++ b/src/Club/TODO
@@ -1,4 +1,6 @@
 use new quickpay bundle
+make a gender form type
+validate jquery date pick the right format
 
 when upgrading, remember to enable all products
 when upgrading, set last_login_time to when they bought last subscription
