--- a/src/Club/TODO
+++ b/src/Club/TODO
@@ -1,4 +1,5 @@
 add booking plan multiple days
+add apple touch icons
 do booking plan form better
 more simple to book fields, if no payment, no need to confirm
 create weather forecast
